--- a/OdeToFood/src/OdeToFood.Consumers/project.json
+++ b/OdeToFood/src/OdeToFood.Consumers/project.json
@@ -11,7 +11,8 @@
         "Microsoft.AspNetCore.Mvc": "1.1.1",
         "Microsoft.Extensions.Configuration.Json": "1.0.0",
         "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
-        "Microsoft.AspNetCore.StaticFiles": "1.0.1"
+        "Microsoft.AspNetCore.StaticFiles": "1.0.1",
+        "Microsoft.AspNetCore.Cors": "1.1.0"
     },
 
   "tools": {
