--- a/OdeToFood/src/OdeToFood/package.json
+++ b/OdeToFood/src/OdeToFood/package.json
@@ -15,11 +15,13 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.2",
+    "fetch": "^1.1.0",
     "file-loader": "^0.10.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-merge": "^3.0.0"
+    "webpack-merge": "^3.0.0",
+    "whatwg-fetch": "^2.0.2"
   }
 }
