--- a/OdeToFood/src/OdeToFood/package.json
+++ b/OdeToFood/src/OdeToFood/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^0.26.2",
     "fetch": "^1.1.0",
     "file-loader": "^0.10.1",
+    "materialize-css": "^0.98.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "style-loader": "^0.13.2",
